sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:9: error: illegal start of simple expression
		}
                ^AlgCombSort:11: error: 'while' expected but '}' found.
}
^