sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
	var ecart = getNombreValeurs()
	do {
		if ( ecart > 1) {
			ecart = (ecart.toDouble / 1.3).toInt
			var i = 0
			while (
		}
	}
}
